# device

./: .gitignore  AndroidProducts.mk  autostart.sh  bluebird.mk  bluebird_arm64_only.mk  init.bluebird.rc  product.prop
bluebird_arm64_only/: BoardConfig.mk
bluebird_x86_64_only/: BoardConfig.mk
bpf/: Android.bp  CMakeLists.txt  bpf_test.c
overlay/frameworks/base/data/etc/: preinstalled-packages-platform.xml
rro/: Android.bp  AndroidManifest.xml
rro/res/xml/: overlays.xml
vnc/: Android.bp
